--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,25 @@
+/*
+  Alex, Raj, Matt
+  Main scss file
+*/
+/* BASE files */
+/* MIXINS */
+/* BASE */
+body {
+  background: #FF0000;
+  color: #FEFFF2; }
 
+h1 {
+  font-size: 3.5em; }
+
+a,
+a:link,
+a:hover,
+a:visited,
+a:active {
+  text-decoration: none; }
+
+/* MODULES files */
+/* LAYOUT files */
 
 /*# sourceMappingURL=style.css.map */
