--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,12 +3,16 @@
 <head>
   <title>Rutgers Flyers App</title>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.2/foundation.min.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/style.css">
 </head>
 <body>
-  <div class="row small-6 small-centered">
-    input[type='text' placeholder='']
+  <div class="row">
+    <div class="small-6 small-centered medium-12 medium-centered">
+      <h1>RUTGER FLYERS</h1>
+      {{{body}}}
+    </div>
   </div>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.2/foundation.min.js"></script>
 </body>
 </html>
