Figuring out Foundation

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="row">
-    <div class="small-6 small-centered medium-12 medium-centered">
+    <div class="small-6 small-centered">
       <h1>RUTGER FLYERS</h1>
       {{{body}}}
     </div>
