Fixed heading title and put in placeholder accordions.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
 <body>
   <div class="row">
     <div class="small-12 text-center">
-      <h1>RUTGER FLYERS</h1>
+      <h1>RUTGERS FLYERS</h1>
       {{{body}}}
     </div>
   </div>
@@ -16,13 +16,25 @@
     <div class="small-12">
       <ul class="accordion" data-accordion>
         <li class="accordion-item" data-accordion-item>
-        <a href="#" class="accordion-title">Accordion 1</a>
+          <a href="#" class="accordion-title">
+            <h5 class="h-align">Sample Text</h5>
+          </a>
           <div class="accordion-content" data-tab-content>
             I would start in the open state, due to using the `is-active` state class.
           </div>
         </li>
         <li class="accordion-item" data-accordion-item>
-          <a href="#" class="accordion-title">Accordion 1</a>
+          <a href="#" class="accordion-title">
+            <h5 class="h-align">Sample Text</h5>
+          </a>
+          <div class="accordion-content" data-tab-content>
+            I would start in the open state, due to using the `is-active` state class.
+          </div>
+        </li>
+        <li class="accordion-item" data-accordion-item>
+          <a href="#" class="accordion-title">
+            <h5 class="h-align">Sample Text</h5>
+          </a>
           <div class="accordion-content" data-tab-content>
             I would start in the open state, due to using the `is-active` state class.
           </div>
