--- a/public/scss/base/_base.scss
+++ b/public/scss/base/_base.scss
@@ -8,11 +8,11 @@ h1{
   font-size: 3.5em;
 }
 
-h5{
-  position: relative;
-  top: 50%;
-  transform: translateY(14%);
-}
+// h5{
+//   position: relative;
+//   top: 50%;
+//   transform: translateY(14%);
+// }
 
 a,
 a:link,
