--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -10,6 +10,7 @@
 
 /* MODULES files */
 @import 'modules/_sections.scss';
+@import 'modules/_buttons.scss';
 
 /* LAYOUT files */
 @import 'layout/_nav.scss';
