--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,40 +7,9 @@
 </head>
 <body>
   <div class="row">
-    <div class="small-12 text-center">
+    <div class="col-xs-12 text-center">
       <h1>RUTGERS FLYERS</h1>
       {{{body}}}
-    </div>
-  </div>
-  <div class="row">
-    <div class="small-12">
-      <ul class="accordion" data-accordion>
-        <li class="accordion-item" data-accordion-item>
-          <a href="#" class="accordion-title">
-            <h5 class="h-align">Sample Text</h5>
-          </a>
-          <div class="accordion-content" data-tab-content>
-            I would start in the open state, due to using the `is-active` state class.
-          </div>
-        </li>
-        <li class="accordion-item" data-accordion-item>
-          <a href="#" class="accordion-title">
-            <h5 class="h-align">Sample Text</h5>
-          </a>
-          <div class="accordion-content" data-tab-content>
-            I would start in the open state, due to using the `is-active` state class.
-          </div>
-        </li>
-        <li class="accordion-item" data-accordion-item>
-          <a href="#" class="accordion-title">
-            <h5 class="h-align">Sample Text</h5>
-          </a>
-          <div class="accordion-content" data-tab-content>
-            I would start in the open state, due to using the `is-active` state class.
-          </div>
-        </li>
-        <!-- ... -->
-      </ul>
     </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
