--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,49 +2,19 @@
 <html>
 <head>
   <title>Rutgers Flyers App</title>
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.2/foundation.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/simplex/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="/static/css/style.css">
 </head>
 <body>
-  <div class="row">
-    <div class="small-12 text-center">
-      <h1>RUTGERS FLYERS</h1>
+  <div class="container">
+    
       {{{body}}}
-    </div>
+
   </div>
-  <div class="row">
-    <div class="small-12">
-      <ul class="accordion" data-accordion>
-        <li class="accordion-item" data-accordion-item>
-          <a href="#" class="accordion-title">
-            <h5 class="h-align">Sample Text</h5>
-          </a>
-          <div class="accordion-content" data-tab-content>
-            I would start in the open state, due to using the `is-active` state class.
-          </div>
-        </li>
-        <li class="accordion-item" data-accordion-item>
-          <a href="#" class="accordion-title">
-            <h5 class="h-align">Sample Text</h5>
-          </a>
-          <div class="accordion-content" data-tab-content>
-            I would start in the open state, due to using the `is-active` state class.
-          </div>
-        </li>
-        <li class="accordion-item" data-accordion-item>
-          <a href="#" class="accordion-title">
-            <h5 class="h-align">Sample Text</h5>
-          </a>
-          <div class="accordion-content" data-tab-content>
-            I would start in the open state, due to using the `is-active` state class.
-          </div>
-        </li>
-        <!-- ... -->
-      </ul>
-    </div>
-  </div>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.2/foundation.min.js"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <script type="text/javascript" src="../../static/js/googlePlaces.js"></script>
 
 </body>
