Added sample panel layout for food places route.

--- a/public/scss/base/_base.scss
+++ b/public/scss/base/_base.scss
@@ -1,5 +1,8 @@
 /* BASE */
 
+body {
+  background: #F4F4F4;
+}
 
 h1{
   font-size: 3.5em;
@@ -10,8 +13,6 @@ h5{
   top: 50%;
   transform: translateY(14%);
 }
-
-
 
 a,
 a:link,
