--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,9 @@
 /* BASE files */
 /* MIXINS */
 /* BASE */
+body {
+  background: #F4F4F4; }
+
 h1 {
   font-size: 3.5em; }
 
@@ -19,6 +22,23 @@ a:hover,
 a:visited,
 a:active {
   text-decoration: none; }
+
+.thumbnail {
+  height: 80%;
+  width: 80%;
+}
+
+.title {
+  margin-bottom: 30px;
+}
+
+i {
+  margin-top: 14px
+}
+
+.open-now {
+  color: green;
+}
 
 /* MODULES files */
 /* LAYOUT files */
