--- a/views/places.handlebars
+++ b/views/places.handlebars
@@ -15,11 +15,11 @@
       <h1 class="title">Food</h1>
     </div>
   </div>
-  <div class="row">
-    <div class="col-xs-10 col-xs-offset-1">
+  <div class="row main-row">
+    <div class="col-xs-10 col-xs-offset-1 main-column">
       <div class="panel panel-default">
         <div class="panel-body">
-          <div class="row">
+          <div class="row ">
             <div class="col-xs-4">
                 <img src="http://img2.10bestmedia.com/Images/Photos/261521/Restaurant---Cristal-Room--J-r-me-Mondi-re_54_990x660.jpg" alt="..." class="img-thumbnail">
             </div>
@@ -51,25 +51,6 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <div class="row">
-            <div class="col-xs-3">
-
-            </div>
-            <div class="col-xs-3">
-              
-            </div>
-            <div class="col-xs-3">
-              
-            </div>
-            <div class="col-xs-3">
-              
-            </div>
-          </div>
-
         </div>
       </div>
     </div>
