--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,31 @@
 </head>
 <body>
 
-  <div class="container">  
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#log-reg" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Rutgers Flyers</a>
+      </div>
+      <div class="collapse navbar-collapse" id="log-reg">
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <button id="login-button" class="btn btn-block btn-primary">Login</button>
+          </li>
+          <li>
+            <button id="register-button" class="btn btn-block btn-primary">Register</button>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container">      
 
     <div class="row">
       <div class="col-xs-12 text-center">
