--- a/views/places.handlebars
+++ b/views/places.handlebars
@@ -17,14 +17,14 @@
   </div>
   <div class="row main-row">
     <div class="col-xs-10 col-xs-offset-1 main-column">
-      <div class="panel panel-default">
+      <!-- <div class="panel panel-default">
         <div class="panel-body">
-          <div class="row ">
+          <div class="row content-row">
             <div class="col-xs-4">
                 <img src="http://img2.10bestmedia.com/Images/Photos/261521/Restaurant---Cristal-Room--J-r-me-Mondi-re_54_990x660.jpg" alt="..." class="img-thumbnail">
             </div>
             <div class="col-xs-4">
-              <div class="row">
+              <div class="row restaurant-row">
                 <div class="col-xs-12">
                   <h2>Frog and the Peach</h2>
                 </div>
@@ -52,7 +52,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
