--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,21 +22,60 @@
       <div class="collapse navbar-collapse" id="log-reg">
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <button id="login-button" class="btn btn-block btn-primary" data-toggle="modal" data-target="#main-modal">Login</button>
+            <button id="login-button" class="btn btn-block btn-primary" data-toggle="modal" data-target="#login-modal">Login</button>
           </li>
           <li>
-            <button id="register-button" class="btn btn-block btn-primary" data-toggle="modal" data-target="#main-modal">Register</button>
+            <button id="register-button" class="btn btn-block btn-primary" data-toggle="modal" data-target="#register-modal">Register</button>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <div id="main-modal fade" class="modal fade" role="dialog">
+  <!-- LOGIN MODAL -->
+  <div id="login-modal" class="modal fade" role="dialog">
     <div class="modal-dialog">
-      <div class="modal-content">
+      <div class="modal-content text-center">
         <div class="modal-body">
-          
+          <h3>Log In</h3>
+          <form action="/login" method="POST">
+            <div class="form-group">
+              <input type="text" name="login_email" placeholder="Enter your email" />
+            </div>
+            <div class="form-group">
+              <input type="text" name="login_password" placeholder="Enter your password" />
+            </div>
+            <button type="submit" class="btn btn-primary">Log In</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- REGISTER MODAL -->
+  <div id="register-modal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content text-center">
+        <div class="modal-body">
+          <h3>Register</h3>
+          <form action="/register" method="POST">
+            <div class="form-group">
+              <input id="reg-fname" type="text" name="reg_fname" placeholder="Enter your first name" />
+            </div>
+            <div class="form-group">
+              <input id="reg-lname" type="text" name="reg_lname" placeholder="Enter your last name"/>
+            </div>
+            <div class="form-group">
+              <input id="reg-email" type="text" name="reg_email" placeholder="Enter your email" />
+            </div>
+            <div class="form-group">
+              <input id="reg-password" type="text" name="reg_password" placeholder="Enter a password" />
+            </div>
+            <div class="form-group">
+              <input id="reg-repass" type="text" placeholder="Reenter your password" />
+            </div>
+            <button type="submit" class="btn btn-primary">Register</button>
+          </form>
         </div>
       </div>
     </div>
