--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -60,16 +60,19 @@
           <h3>Register</h3>
           <form action="/register" method="POST">
             <div class="form-group">
-              <input id="reg-fname" type="text" name="reg_fname" placeholder="Enter your first name" />
+              <input id="reg-fname" type="text" name="f_name" placeholder="Enter your first name" />
             </div>
             <div class="form-group">
-              <input id="reg-lname" type="text" name="reg_lname" placeholder="Enter your last name"/>
+              <input id="reg-lname" type="text" name="l_name" placeholder="Enter your last name"/>
             </div>
             <div class="form-group">
-              <input id="reg-email" type="text" name="reg_email" placeholder="Enter your email" />
+              <input id="reg-email" type="text" name="email" placeholder="Enter your email" />
             </div>
             <div class="form-group">
-              <input id="reg-password" type="text" name="reg_password" placeholder="Enter a password" />
+              <input type="text" name="username" placeholder="Choose a username" />
+            </div>
+            <div class="form-group">
+              <input id="reg-password" type="text" name="password" placeholder="Enter a password" />
             </div>
             <div class="form-group">
               <input id="reg-repass" type="text" placeholder="Reenter your password" />
