Started adding register validation.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -77,7 +77,8 @@
             <div class="form-group">
               <input id="reg-repass" type="text" placeholder="Reenter your password" />
             </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <p class="reg-error"></p>
+            <button type="submit" class="btn btn-primary reg-button">Register</button>
           </form>
         </div>
       </div>
