Added responsive bootstrap classes for xs screens.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,9 @@ a:active {
 #main_login {
   display: none; }
 
+.button-row {
+  margin-top: 20px;
+}
 /* LAYOUT files */
 
 /*# sourceMappingURL=style.css.map */
