--- a/views/places.handlebars
+++ b/views/places.handlebars
@@ -1,41 +1,39 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-xs-10 col-xs-offset-1">
+    <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
       <h1 class="title">Food</h1>
     </div>
   </div>
   <div class="row main-row">
-    <div class="col-xs-10 col-xs-offset-1 main-column">
+    <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 main-column">
       <div class="panel panel-default">
         <div class="panel-body">
           <div class="row content-row">
-            <div class="col-xs-4">
+            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                 <img src="http://img2.10bestmedia.com/Images/Photos/261521/Restaurant---Cristal-Room--J-r-me-Mondi-re_54_990x660.jpg" alt="..." class="img-thumbnail">
             </div>
-            <div class="col-xs-4">
-              <div class="row restaurant-row">
-                <div class="col-xs-12">
-                  <h2>Frog and the Peach</h2>
+            <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
+              <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                  <h3 class="text-center">Harold's New York Deli and Grill</h3>
                 </div>
               </div>
               <div class="row">
-                <div class="col-xs-12">
-                  <h4 class="text-muted">123 George St. New Brunswick, NJ</h4>
-                </div>
-              </div>
-            </div>
-            <div class="col-xs-4">
-              <div class="row">
-                <div class="col-xs-2 col-xs-offset-3">
-                  <i class="fa fa-star-o fa-3x"></i>
-                </div>
-                <div class="col-xs-7">
-                  <h2>3.8 Stars</h2>
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                  <h4 class="text-muted text-center">28 Woodbridge Ave Highland Park NJ 08904</h4>
                 </div>
               </div>
               <div class="row">
-                <div class="col-xs-5 col-xs-offset-4">
-                  <h4 class="open-now text-center">Open Now</h4>
+                <div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
+                  <h4 class="alert alert-success text-center">Open Now</h4>
+                </div>
+              </div>
+              <div class="row button-row">
+                <div class="col-xs-6 col-sm-6 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1">
+                  <button class="btn btn-default btn-block">Reviews</button>
+                </div>
+                <div class="col-xs-6 col-sm-6 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1">
+                  <button class="btn btn-primary btn-block">More Info</button>
                 </div>
               </div>
             </div>
