added most of the register functionality. Need to do username validation.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -78,7 +78,7 @@
               <input id="reg-repass" type="text" placeholder="Reenter your password" />
             </div>
             <p class="reg-error"></p>
-            <button type="submit" class="btn btn-primary reg-button">Register</button>
+            <button type="submit" class="btn btn-primary reg-button" disabled>Register</button>
           </form>
         </div>
       </div>
