front end register validation working.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -69,13 +69,13 @@
               <input id="reg-email" type="text" name="email" placeholder="Enter your email" />
             </div>
             <div class="form-group">
-              <input type="text" name="username" placeholder="Choose a username" />
+              <input id="reg-username" type="text" name="username" placeholder="Choose a username" />
             </div>
             <div class="form-group">
-              <input id="reg-password" type="text" name="password" placeholder="Enter a password" />
+              <input id="reg-password" type="password" name="password" placeholder="Enter a password" />
             </div>
             <div class="form-group">
-              <input id="reg-repass" type="text" placeholder="Reenter your password" />
+              <input id="reg-repass" type="password" placeholder="Reenter your password" />
             </div>
             <p class="reg-error"></p>
             <button type="submit" class="btn btn-primary reg-button" disabled>Register</button>
