Moved googleplaces.js reference to places.handlebars and moved css to scss foler.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,12 +24,9 @@ a:active {
   text-decoration: none; }
 
 /* MODULES files */
-#main_login {
-  display: none; }
-
 .button-row {
-  margin-top: 20px;
-}
+  margin-top: 20px; }
+
 /* LAYOUT files */
 
 /*# sourceMappingURL=style.css.map */
