--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -60,22 +60,22 @@
           <h3>Register</h3>
           <form action="/register" method="POST">
             <div class="form-group">
-              <input id="reg-fname" type="text" name="f_name" placeholder="Enter your first name" />
+              <input id="reg-fname" class="form-control" type="text" name="f_name" placeholder="Enter your first name" />
             </div>
             <div class="form-group">
-              <input id="reg-lname" type="text" name="l_name" placeholder="Enter your last name"/>
+              <input id="reg-lname" class="form-control" type="text" name="l_name" placeholder="Enter your last name"/>
             </div>
             <div class="form-group">
-              <input id="reg-email" type="text" name="email" placeholder="Enter your email" />
+              <input id="reg-email" class="form-control" type="text" name="email" placeholder="Enter your email" />
             </div>
             <div class="form-group">
-              <input id="reg-username" type="text" name="username" placeholder="Choose a username" />
+              <input id="reg-username" class="form-control" type="text" name="username" placeholder="Choose a username" />
             </div>
             <div class="form-group">
-              <input id="reg-password" type="password" name="password" placeholder="Enter a password" />
+              <input id="reg-password" class="form-control" type="password" name="password" placeholder="Enter a password" />
             </div>
             <div class="form-group">
-              <input id="reg-repass" type="password" placeholder="Reenter your password" />
+              <input id="reg-repass" class="form-control" type="password" placeholder="Reenter your password" />
             </div>
             <p class="reg-error"></p>
             <button type="submit" class="btn btn-primary reg-button" disabled>Register</button>
