--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,10 +40,10 @@
           <h3>Log In</h3>
           <form action="/login" method="POST">
             <div class="form-group">
-              <input type="text" name="login_email" placeholder="Enter your email" />
+              <input type="text" class="form-control" name="login_email" placeholder="Enter your email" />
             </div>
             <div class="form-group">
-              <input type="text" name="login_password" placeholder="Enter your password" />
+              <input type="text" class="form-control" name="login_password" placeholder="Enter your password" />
             </div>
             <button type="submit" class="btn btn-primary">Log In</button>
           </form>
