--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -59,25 +59,33 @@
         <div class="modal-body">
           <h3>Register</h3>
           <form action="/register" method="POST">
-            <div class="form-group">
+            <div class="col-xs-12 col-md-10 col-md-offset-1">
+              <label for="reg-fname">First Name</label>
               <input id="reg-fname" class="form-control" type="text" name="f_name" placeholder="Enter your first name" />
             </div>
-            <div class="form-group">
+            <div class="col-xs-12 col-md-10 col-md-offset-1">
+              <label for="reg-fname">Last Name</label>
               <input id="reg-lname" class="form-control" type="text" name="l_name" placeholder="Enter your last name"/>
             </div>
-            <div class="form-group">
+            <div class="col-xs-12 col-md-10 col-md-offset-1">
+              <label for="reg-email">Email</label>
               <input id="reg-email" class="form-control" type="text" name="email" placeholder="Enter your email" />
             </div>
-            <div class="form-group">
+            <div class="col-xs-12 col-md-10 col-md-offset-1">
+              <label for="reg-username">Username</label>
               <input id="reg-username" class="form-control" type="text" name="username" placeholder="Choose a username" />
             </div>
-            <div class="form-group">
+            <div class="col-xs-12 col-md-10 col-md-offset-1">
+              <label for="reg-password">Password</label>
               <input id="reg-password" class="form-control" type="password" name="password" placeholder="Enter a password" />
             </div>
-            <div class="form-group">
+            <div class="col-xs-12 col-md-10 col-md-offset-1">
+              <label for="reg-repass">Confirm your password</label>
               <input id="reg-repass" class="form-control" type="password" placeholder="Reenter your password" />
             </div>
-            <p class="reg-error"></p>
+            <div class="col-xs-12 col-md-10 col-md-offset-1">
+              <p class="reg-error"></p>
+            </div>
             <button type="submit" class="btn btn-primary reg-button" disabled>Register</button>
           </form>
         </div>
