--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,9 @@ a:active {
 .button-row {
   margin-top: 20px; }
 
+.phone-row {
+  margin-bottom: 10px; }
+
 /* LAYOUT files */
 
 /*# sourceMappingURL=style.css.map */
