--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/simplex/bootstrap.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+  <meta charset="utf-8">
 </head>
 <body>
 
@@ -22,10 +23,10 @@
       <div class="collapse navbar-collapse" id="log-reg">
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <button id="login-button" class="btn btn-block btn-primary" data-toggle="modal" data-target="#login-modal">Login</button>
+            <button id="login-button" class="btn btn-block btn-default" data-toggle="modal" data-target="#login-modal">Login</button>
           </li>
           <li>
-            <button id="register-button" class="btn btn-block btn-primary" data-toggle="modal" data-target="#register-modal">Register</button>
+            <button id="register-button" class="btn btn-block btn-default" data-toggle="modal" data-target="#register-modal">Register</button>
           </li>
         </ul>
       </div>
