--- a/views/places.handlebars
+++ b/views/places.handlebars
@@ -10,8 +10,31 @@
   </div>
 </div>
 
+
+<!-- Modal -->
+<div id="reviewModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Google Reviews</h4>
+      </div>
+      <div class="modal-body">
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
   <!-- Modal -->
-  <div class="modal fade" id="myModal" role="dialog">
+  <div class="modal fade" id="infoModal" role="dialog">
     <div class="modal-dialog">
     
       <!-- Modal content-->
@@ -54,6 +77,8 @@
       
     </div>
   </div>
+
+
 
   <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
   <!-- Latest compiled and minified JavaScript -->
