--- a/public/scss/modules/_sections.scss
+++ b/public/scss/modules/_sections.scss
@@ -4,6 +4,24 @@
   margin-top: 20px;
 }
 
+.nav-buttons{
+  margin-left: 20px;
+  font-size: 1.2em;
+  background: $secondary-rutgers-color;
+  border-radius: 20px;
+  padding: 5px 10px;
+  transition: all 1.2s;
+}
+
+.nav-buttons:hover{
+  background: lighten($secondary-rutgers-color, 12%);
+  text-shadow: 0 0 5px #fff;
+}
+
+.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form{
+  padding: 7px 0;
+}
+
 .phone-row {
   margin-bottom: 10px;
 }
