--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,10 +23,10 @@
       <div class="collapse navbar-collapse" id="log-reg">
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <button id="login-button" class="btn btn-block btn-default" data-toggle="modal" data-target="#login-modal">Login</button>
+            <button id="login-button" class="btn btn-default nav-buttons" data-toggle="modal" data-target="#login-modal">Login</button>
           </li>
           <li>
-            <button id="register-button" class="btn btn-block btn-default" data-toggle="modal" data-target="#register-modal">Register</button>
+            <button id="register-button" class="btn btn-default nav-buttons" data-toggle="modal" data-target="#register-modal">Register</button>
           </li>
         </ul>
       </div>
