--- a/views/places.handlebars
+++ b/views/places.handlebars
@@ -21,7 +21,7 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">Google Reviews</h4>
       </div>
-      <div class="modal-body">
+      <div class="modal-body review-body">
 
       </div>
       <div class="modal-footer">
