--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,7 +2,7 @@
   <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
     <div class="panel panel-default">
       <div class="panel-body">
-        <a href="/places"><img src="../static/pics/food.jpg" class="img-responsive"></a>
+        <a href="/food"><img src="../static/pics/food.jpg" class="img-responsive"></a>
       </div>
     </div>
   </div>
