--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -94,6 +94,74 @@
     </div>
   </div>
 
+
+  <!-- Reviews Modal -->
+<div id="reviewModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Google Reviews</h4>
+      </div>
+      <div class="modal-body review-body">
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+  <!-- More Info Modal -->
+  <div class="modal fade" id="infoModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-body">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <div class="row phone-row">
+            <div class="col-xs-1 phone-icon-col">
+              
+            </div>
+            <div class="col-xs-4 phone-number-col">
+              
+            </div>
+            <div class="col-xs-1 price-icon-col">
+              
+            </div>
+            <div class="col-xs-5 price-col">
+              
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-8">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th><h4>Hours</h4></th>
+                  </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+
   <div class="container">      
 
     <div class="row">
