--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,21 +2,24 @@
   <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
     <div class="panel panel-default">
       <div class="panel-body">
-        <a href="/food"><img src="../static/pics/food.jpg" class="img-responsive"></a>
+        <a href="/food" class="heading-link"><h1 class="pic-heading text-center">Eat</h1></a>
+        <a href="/food"><img src="../static/pics/food.jpg" class="img-responsive home-link"></a>
       </div>
     </div>
   </div>
   <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
     <div class="panel panel-default">
       <div class="panel-body">
-        <a href="/drink"><img src="../static/pics/drink.jpg" class="img-responsive"></a>
+        <a href="/drink" class="heading-link"><h1 class="pic-heading text-center">Drink</h1></a>
+        <a href="/drink"><img src="../static/pics/drink.jpg" class="img-responsive home-link"></a>
       </div>
     </div>
   </div>
   <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
     <div class="panel panel-default">
       <div class="panel-body">
-        <a href="/study"><img src="../static/pics/study.jpg" class="img-responsive"></a>
+        <a href="/study" class="heading-link"><h1 class="pic-heading text-center">Study</h1></a>
+        <a href="/study"><img src="../static/pics/study.jpg" class="img-responsive home-link"></a>
       </div>
     </div>
   </div>
