--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,6 +45,24 @@ a:active {
 .phone-row {
   margin-bottom: 10px; }
 
+.home-link {
+  opacity: 0.5; }
+
+.home-link:hover {
+  opacity: 1; }
+
+.pic-heading {
+  position: absolute;
+  z-index: 1;
+  top: 25%;
+  left: 35%;
+  color: white;
+  background: rgba(0, 0, 0, 0.35);
+  padding: 10px; }
+
+.heading-link:hover ~ a > .home-link {
+  opacity: 1; }
+
 /* LAYOUT files */
 
 /*# sourceMappingURL=style.css.map */
