started adding user review input area

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,6 +63,25 @@ a:active {
 .heading-link:hover ~ a > .home-link {
   opacity: 1; }
 
+.user-review-toggle {
+  font-size: 1.6em; }
+
+.user-review-area {
+  border-bottom: 1px solid black; }
+
+.review-close {
+  margin-top: 20px; }
+
+.user-review-entry {
+  display: block;
+  width: 100%;
+  resize: none;
+  margin: 10px 0;
+  height: 120px; }
+
+.review-submit-button {
+  margin-bottom: 15px; }
+
 /* LAYOUT files */
 
 /*# sourceMappingURL=style.css.map */
