--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -109,7 +109,20 @@
 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <div class="col-xs-12 user-review-click-area text-center">
+          <a class="user-review-toggle" href="#">Click to add a review</a>
+        </div>
+        <div class="row user-review-area">
+          <div class="col-xs-12 text-right">
+            <form>
+              <textarea class="user-review-entry"></textarea>
+              <button type="submit" class="btn btn-primary review-submit-button">Submit Review</button>
+            </form>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <button type="button" class="btn btn-default btn-block review-close" data-dismiss="modal">Close</button>
+        </div>
       </div>
     </div>
 
