added front end user review input area and fixed mobile responsiveness with required meta tag

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,7 +67,8 @@ a:active {
   font-size: 1.6em; }
 
 .user-review-area {
-  border-bottom: 1px solid black; }
+  border-bottom: 1px solid black;
+  display: none; }
 
 .review-close {
   margin-top: 20px; }
