--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Rutgers Flyers App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/simplex/bootstrap.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="/static/css/style.css">
