--- a/public/scss/layout/_nav.scss
+++ b/public/scss/layout/_nav.scss
@@ -12,7 +12,7 @@
   text-shadow: 0 0 5px #fff;
 }
 
-.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form{
+.navbar-inverse{
   padding: 7px 0;
 }
 
