--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,13 +41,18 @@
         <div class="modal-body">
           <h3>Log In</h3>
           <form action="/login" method="POST">
-            <div class="form-group">
-              <input type="text" class="form-control" name="login_email" placeholder="Enter your email" />
+            <div class="col-xs-12 col-md-10 col-md-offset-1">
+              <label for="log-email">Email</label>
+              <input id="log-email" type="text" class="form-control" name="login_email" placeholder="Enter your email" />
             </div>
-            <div class="form-group">
-              <input type="text" class="form-control" name="login_password" placeholder="Enter your password" />
+            <div class="col-xs-12 col-md-10 col-md-offset-1">
+              <label for="log-password">Password</label>
+              <input id="log-password" type="password" class="form-control" name="login_password" placeholder="Enter your password" />
             </div>
-            <button type="submit" class="btn btn-primary">Log In</button>
+            <div class="col-xs-12 col-md-10 col-md-offset-1">
+              <p class="login-error"></p>
+            </div>
+            <button type="submit" class="btn btn-primary login-button">Log In</button>
           </form>
         </div>
       </div>
